syntax = "proto3";
option go_package="./proto_models";
package proto;

message SendMailRequest {
    string to = 1;
    string to_name = 2;
    string subject = 3;
    string body = 4;
}

message SendMailResponse {
    string message = 1;
}

message SendLogRequest {
    string service = 1;
    string level = 2;
    string message = 3;
    string metadata = 4;
    string time = 5;
    string method = 6;
    string path = 7;
    string ip = 8;
}

message SendLogResponse {
    string message = 1;
}


service Adapter {
    rpc SendMail(SendMailRequest) returns (SendMailResponse) {}
    rpc SendLog(SendLogRequest) returns (SendLogResponse) {}
}