syntax = "proto3";
option go_package="./proto_models";
package proto;

message LogRequest {
    string service = 1;
    string level = 2;
    string message = 3;
    string metadata = 4;
    string time = 5;
    string method = 6;
    string path = 7;
    string ip = 8;
}

message LogResponse {
    string message = 1;
}

service Log {
    rpc SaveLog(LogRequest) returns (LogResponse) {}
}